make top menu full width

--- a/lib/blockster_v2_web/live/post_live/show.html.heex
+++ b/lib/blockster_v2_web/live/post_live/show.html.heex
@@ -1,7 +1,7 @@
 <Layouts.app flash={@flash}>
   <div class="article-page bg-[#F7F8FA] min-h-screen">
     <!-- Main Header Banner -->
-    <div class="main-header-banner pt-24 lg:pt-0 pb-5 lg:mt-0 px-6 lg:pl-11 lg:pr-7 absolute w-full">
+    <div class="main-header-banner pt-24 lg:pt-0 pb-5 lg:mt-0 px-6 lg:pl-11 lg:pr-7 fixed top-0 left-0 right-0 w-full z-50">
       <header class="pt-6 lg:flex items-center justify-between gap-4 hidden">
         <div class="left-header-inner flex items-center gap-9 w-full">
           <div>
