fix search field rounding and back button styling

--- a/lib/blockster_v2_web/live/post_live/show.html.heex
+++ b/lib/blockster_v2_web/live/post_live/show.html.heex
@@ -34,7 +34,7 @@
                   <input
                     type="text"
                     placeholder="Search"
-                    class="text-left text-grey-30 h-12 px-5 pl-[29px] bg-bg-input text-sm font-[400] font-haas_roman_55 w-full"
+                    class="text-left text-grey-30 h-12 px-5 pl-[29px] bg-bg-input text-sm font-[400] font-haas_roman_55 w-full rounded-full"
                   />
                 </div>
               </div>
