fix search placeholder and back button

--- a/lib/blockster_v2_web/live/post_live/show.html.heex
+++ b/lib/blockster_v2_web/live/post_live/show.html.heex
@@ -203,7 +203,7 @@
             <div class="flex w-full max-md:hidden">
               <.link
                 navigate={~p"/"}
-                class="flex gap-1 items-center xs:px-4 px-2 xs:py-2 py-1.5 bg-white rounded-[100px] font-haas_medium_65 xs:text-sm text-xs border-[1px] border-[#E7E8F1] shadow-sm hover:bg-gray-50 transition-colors"
+                class="px-4 pr-[9px] py-2 bg-white rounded-[100px] font-haas_medium_65 text-[16px] text-[#101D36] border-[1px] border-[#0000001F] flex items-center gap-1"
               >
                 <span class="min-w-[14px]">
                   <svg
