--- a/lib/blockster_v2_web/components/layouts/root.html.heex
+++ b/lib/blockster_v2_web/components/layouts/root.html.heex
@@ -14,7 +14,8 @@
     />
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
     <script src="https://cdn.quilljs.com/1.3.6/quill.js">
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
     </script>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/js/app.js"}>
     </script>
