--- a/lib/blockster_v2_web/components/layouts/root.html.heex
+++ b/lib/blockster_v2_web/components/layouts/root.html.heex
@@ -13,12 +13,9 @@
       rel="stylesheet"
     />
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js">
-    </script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
-    </script>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/js/app.js"}>
-    </script>
     <script>
       (() => {
         const setTheme = (theme) => {
@@ -36,7 +33,6 @@
         window.addEventListener("storage", (e) => e.key === "phx:theme" && setTheme(e.newValue || "system"));
         window.addEventListener("phx:set-theme", ({ detail: { theme } }) => setTheme(theme));
       })();
-    </script>
   </head>
   <body>
     {@inner_content}
