add Twitter widget script for tweet embeds

--- a/lib/blockster_v2_web/components/layouts/root.html.heex
+++ b/lib/blockster_v2_web/components/layouts/root.html.heex
@@ -32,6 +32,8 @@
         window.addEventListener("phx:set-theme", ({ detail: { theme } }) => setTheme(theme));
       })();
     </script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
+    </script>
   </head>
   <body>
     {@inner_content}
