remove bad seed migration that uses raw SQL

--- a/lib/blockster_v2_web/live/post_live/form_component.html.heex
+++ b/lib/blockster_v2_web/live/post_live/form_component.html.heex
@@ -315,7 +315,7 @@
                 Content
               </label>
               <div
-                id="tiptap-editor"
+                id={"tiptap-editor-#{@action}-#{@post.id || "new"}"}
                 phx-update="ignore"
                 phx-hook="TipTapEditor"
                 data-content={
